--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@main
         with:
           fetch-depth: 2
-          path: my_bucket
+          path: bucket
       - name: Checkout Scoop
         uses: actions/checkout@main
         with:
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@main
         with:
           fetch-depth: 2
-          path: my_bucket
+          path: bucket
       - name: Checkout Scoop
         uses: actions/checkout@main
         with:
