ci: 更新测试脚本路径并添加新应用
- 修改测试脚本路径从 my_bucket 到 app 目录
- 添加 uTools 应用的 JSON 配置文件
- 删除 scripts 目录下的 .gitkeep 文件
- 新增 getfile.ps1 脚本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         shell: powershell
         run: |
           $env:SCOOP_HOME="$(Convert-Path '.\scoop_core')"
-          .\my_bucket\bin\test.ps1
+          .\app\bin\test.ps1
   test_pwsh:
     name: PowerShell
     runs-on: windows-latest
@@ -56,4 +56,4 @@ jobs:
         shell: pwsh
         run: |
           $env:SCOOP_HOME="$(Convert-Path '.\scoop_core')"
-          .\my_bucket\bin\test.ps1
+          .\app\bin\test.ps1
